fix mobile code overflow problem

--- a/themes/basic/source/style.css
+++ b/themes/basic/source/style.css
@@ -58,6 +58,7 @@ pre {
     border: 1px;
     padding: 6px;
     background-color: #000000;
+    overflow: auto;
 }
 
 pre code {
